--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,17 @@ thiserror = "1"
 tracing = { version = "0.1", optional = true }
 http = "1"
 
+chrono = { version = "0.4", features = ["serde"] }
 serde = "1.0.210"
 serde_json = "1.0.128"
-kv = { version = "0.24.0", features = ["json-value"] }
+
+zstd = { version = "0.13.2", optional = true }
+
+cryptostream = { version = "0.3.2"}
+openssl = "0.10.66"
+rand = { version = "0.8.5" }
+blake2 = "0.10.6"
+rand_hc = "0.3.2"
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
@@ -39,7 +47,13 @@ ssr = [
     "leptos_meta/ssr",
     "leptos_router/ssr",
     "dep:tracing",
+    "dep:zstd",
 ]
+
+[profile.release]
+lto = true
+codegen-units = 1
+opt-level = 3
 
 # Defines a size-optimized profile for the WASM bundle in release mode
 [profile.wasm-release]
@@ -51,7 +65,7 @@ panic = "abort"
 
 [package.metadata.leptos]
 # The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
-output-name = "temp"
+output-name = "data_dance"
 
 # The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
 site-root = "target/site"
@@ -61,7 +75,7 @@ site-root = "target/site"
 site-pkg-dir = "pkg"
 
 # [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
-style-file = ""
+# style-file = ""
 # Assets source dir. All files found here will be copied and synchronized to site-root.
 # The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
 #
@@ -73,12 +87,6 @@ site-addr = "127.0.0.1:3000"
 
 # The port to use for automatic reload monitoring
 reload-port = 3001
-
-# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
-#   [Windows] for non-WSL use "npx.cmd playwright test"
-#   This binary name can be checked in Powershell with Get-Command npx
-end2end-cmd = "npx playwright test"
-end2end-dir = "end2end"
 
 #  The browserlist query used for optimizing the CSS.
 browserquery = "defaults"
