--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ tracing = { version = "0.1", optional = true }
 http = "1"
 
 chrono = { version = "0.4", features = ["serde"] }
+toml = {version = "0.8.19", features = ["parse"], optional = true}
 serde = "1.0.210"
 serde_json = "1.0.128"
 
@@ -48,6 +49,7 @@ ssr = [
     "leptos_router/ssr",
     "dep:tracing",
     "dep:zstd",
+    "dep:toml"
 ]
 
 [profile.release]
