--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,8 +30,8 @@ serde_json = "1.0.128"
 
 zstd = { version = "0.13.2", optional = true }
 
-cryptostream = { version = "0.3.2"}
-openssl = "0.10.66"
+cryptostream = { version = "0.3.2", optional = true}
+openssl = { version = "0.10.66", optional = true }
 rand = { version = "0.8.5" }
 blake2 = "0.10.6"
 rand_hc = "0.3.2"
@@ -49,7 +49,9 @@ ssr = [
     "leptos_router/ssr",
     "dep:tracing",
     "dep:zstd",
-    "dep:toml"
+    "dep:toml",
+    "dep:openssl",
+    "dep:cryptostream"
 ]
 
 [profile.release]
