--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ tokio = { version = "1", features = ["rt-multi-thread", "signal"], optional = tr
 tower = { version = "0.4", optional = true }
 tower-http = { version = "0.5", features = ["fs"], optional = true }
 wasm-bindgen = "=0.2.93"
+wasm-bindgen-futures = "=0.4.37"
+web-sys = { version = "=0.3.70", features = ["RequestInit", "Request", "Window"] }
 thiserror = "1"
 tracing = { version = "0.1", optional = true }
 http = "1"
