--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,15 +15,16 @@ leptos = { version = "0.6", features = ["nightly"] }
 leptos_axum = { version = "0.6", optional = true }
 leptos_meta = { version = "0.6", features = ["nightly"] }
 leptos_router = { version = "0.6", features = ["nightly"] }
+leptos_query = { version = "0.5.3"}
 tokio = { version = "1", features = ["rt-multi-thread", "signal"], optional = true }
 tower = { version = "0.4", optional = true }
 tower-http = { version = "0.5", features = ["fs"], optional = true }
 wasm-bindgen = "=0.2.93"
-wasm-bindgen-futures = "=0.4.37"
-web-sys = { version = "=0.3.70", features = ["RequestInit", "Request", "Window"] }
 thiserror = "1"
 tracing = { version = "0.1", optional = true }
 http = "1"
+
+humansize = "2.1.3"
 
 chrono = { version = "0.4", features = ["serde"] }
 toml = {version = "0.8.19", features = ["parse"], optional = true}
@@ -37,9 +38,10 @@ openssl = { version = "0.10.66", optional = true }
 rand = { version = "0.8.5" }
 blake2 = "0.10.6"
 rand_hc = "0.3.2"
+leptos-remix-icon = "1.0.3"
 
 [features]
-hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
+hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "leptos_query/hydrate"]
 ssr = [
     "dep:axum",
     "dep:tokio",
@@ -49,6 +51,7 @@ ssr = [
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
+    "leptos_query/ssr",
     "dep:tracing",
     "dep:zstd",
     "dep:toml",
@@ -79,6 +82,9 @@ site-root = "target/site"
 # The site-root relative folder where all compiled output (JS, WASM and CSS) is written
 # Defaults to pkg
 site-pkg-dir = "pkg"
+
+tailwind-input-file = "style/tailwind.css"
+tailwind-config-file = "tailwind.config.js"
 
 # [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
 # style-file = ""
