--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,131 +2,33 @@
 name = "data-dance"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[lib]
-crate-type = ["cdylib", "rlib"]
-
 [dependencies]
-axum = { version = "0.7", optional = true }
-console_error_panic_hook = "0.1"
-leptos = { version = "0.6", features = ["nightly"] }
-leptos_axum = { version = "0.6", optional = true }
-leptos_meta = { version = "0.6", features = ["nightly"] }
-leptos_router = { version = "0.6", features = ["nightly"] }
-leptos_query = { version = "0.5.3"}
-tokio = { version = "1", features = ["rt-multi-thread", "signal"], optional = true }
-tower = { version = "0.4", optional = true }
-tower-http = { version = "0.5", features = ["fs"], optional = true }
+axum = { version = "0.7" }
+tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
+axum-embed = "0.1.0"
+rust-embed = "8.5.0"
 wasm-bindgen = "=0.2.93"
 thiserror = "1"
-tracing = { version = "0.1", optional = true }
 http = "1"
 
-humansize = "2.1.3"
-
 chrono = { version = "0.4", features = ["serde"] }
-toml = {version = "0.8.19", features = ["parse"], optional = true}
-serde = "1.0.210"
+toml = {version = "0.8.19", features = ["parse"] }
+serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 
-zstd = { version = "0.13.2", optional = true }
+zstd = { version = "0.13.2" }
 
-cryptostream = { version = "0.3.2", optional = true}
-openssl = { version = "0.10.66", optional = true }
+cryptostream = { version = "0.3.2"}
+openssl = { version = "0.10.66" }
 rand = { version = "0.8.5" }
 blake2 = "0.10.6"
 rand_hc = "0.3.2"
-leptos-remix-icon = "1.0.3"
-
-[features]
-hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "leptos_query/hydrate"]
-ssr = [
-    "dep:axum",
-    "dep:tokio",
-    "dep:tower",
-    "dep:tower-http",
-    "dep:leptos_axum",
-    "leptos/ssr",
-    "leptos_meta/ssr",
-    "leptos_router/ssr",
-    "leptos_query/ssr",
-    "dep:tracing",
-    "dep:zstd",
-    "dep:toml",
-    "dep:openssl",
-    "dep:cryptostream"
-]
 
 [profile.release]
 lto = true
 codegen-units = 1
 opt-level = 3
-
-# Defines a size-optimized profile for the WASM bundle in release mode
-[profile.wasm-release]
-inherits = "release"
-opt-level = 'z'
-lto = true
-codegen-units = 1
-panic = "abort"
-
-[package.metadata.leptos]
-# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
-output-name = "data_dance"
-
-# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
-site-root = "target/site"
-
-# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
-# Defaults to pkg
-site-pkg-dir = "pkg"
-
-tailwind-input-file = "style/tailwind.css"
-tailwind-config-file = "tailwind.config.js"
-
-# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
-# style-file = ""
-# Assets source dir. All files found here will be copied and synchronized to site-root.
-# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
-#
-# Optional. Env: LEPTOS_ASSETS_DIR.
-assets-dir = "public"
-
-# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
-site-addr = "127.0.0.1:3000"
-
-# The port to use for automatic reload monitoring
-reload-port = 3001
-
-#  The browserlist query used for optimizing the CSS.
-browserquery = "defaults"
-
-# The environment Leptos will run in, usually either "DEV" or "PROD"
-env = "DEV"
-
-# The features to use when compiling the bin target
-#
-# Optional. Can be over-ridden with the command line parameter --bin-features
-bin-features = ["ssr"]
-
-# If the --no-default-features flag should be used when compiling the bin target
-#
-# Optional. Defaults to false.
-bin-default-features = false
-
-# The features to use when compiling the lib target
-#
-# Optional. Can be over-ridden with the command line parameter --lib-features
-lib-features = ["hydrate"]
-
-# If the --no-default-features flag should be used when compiling the lib target
-#
-# Optional. Defaults to false.
-lib-default-features = false
-
-# The profile to use for the lib target when compiling for release
-#
-# Optional. Defaults to "release".
-lib-profile-release = "wasm-release"
