--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ build = "build.rs"
 
 [dependencies]
 axum = { version = "0.7" }
+tower-http = { version = "0.6.2", features = ["cors"] }
 tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
 axum-embed = "0.1.0"
 rust-embed = "8.5.0"
