--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,19 +10,17 @@
   },
   "dependencies": {
     "@heroui/react": "^2.6.14",
+    "@tanstack/react-query": "^5.66.0",
     "framer-motion": "^12.4.2",
-    "n": "^10.1.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@deemlol/next-icons": "^0.1.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
