--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,9 @@
     "rust-analyzer.check.command": "clippy",
     "rust-analyzer.check.allTargets": false,
     "rust-analyzer.cargo.allTargets": false,
-    "rust-analyzer.cargo.buildScripts.enable": true
+    "rust-analyzer.cargo.buildScripts.enable": true,
+    "rust-analyzer.cargo.cfgs": [
+        "miri",
+        "debug_assertions"
+    ],
 }
