--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,11 @@ edition = "2024"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-poem = { version = "1.2.3", features = ["embed", "csrf"] }
-poem-openapi = { version = "1.1.0", features=["swagger-ui"]}
+poem = { version = "3.1.12", features = ["embed", "csrf"] }
+poem-openapi = { version = "5.1.16", features=["swagger-ui", "chrono"]}
 tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
 rust-embed = "8.5.0"
 wasm-bindgen = "=0.2.93"
-http = "1"
 
 chrono = { version = "0.4", features = ["serde"] }
 toml = {version = "0.8.19", features = ["parse"] }
