--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,23 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@heroui/react": "^2.6.14",
-    "@tanstack/react-query": "^5.66.0",
-    "framer-motion": "^12.4.2",
-    "next": "15.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@heroui/react": "^2.8.5",
+    "@tanstack/react-query": "^5.90.10",
+    "framer-motion": "^12.23.24",
+    "next": "16.0.3",
+    "openapi-fetch": "^0.15.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@deemlol/next-icons": "^0.1.9",
-    "@types/node": "^20",
+    "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
 }
