--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,7 +16,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noUncheckedIndexedAccess": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "plugins": [
       {
@@ -35,8 +35,9 @@
     "../target/site/types/**/*.ts",
     ".next/types/**/*.ts",
     "next-env.d.ts",
-    "out/types/**/*.ts"
-  ],
+    "out/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
+, "src/app/hero.mts"  ],
   "exclude": [
     "node_modules"
   ]
